[project]
name = "email-sender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.5",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "gspread>=6.2.1",
    "openai-agents>=0.2.10",
    "openai-whisper>=20250625",
    "pydub>=0.25.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "tldextract>=5.3.0",
    "twilio>=9.8.0",
]
